--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flixster">
+    package="com.example.flixster" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,10 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Flixster">
-        <activity android:name=".MovieTrailerActivity"></activity>
+        android:theme="@style/Theme.Flixster" >
+        <activity android:name=".GenreFilterActivity" >
+        </activity>
+        <activity android:name=".MovieTrailerActivity" />
         <activity android:name=".DetailsActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
